Add PR builder GHA (#138)
Mostly copy of PR builder used in hazelcast-wm